rejiggered ticker and added community note

--- a/justin_dumb_stuff.ipynb
+++ b/justin_dumb_stuff.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Home\\anaconda3\\envs\\spcopenai\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import dspy\n",
     "import os\n",
@@ -22,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1046,6 +1055,136 @@
    ],
    "source": [
     "prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OPENROUTER_API_KEY = os.getenv(\"OPENROUTER_API_KEY\")  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Controversial(dspy.Signature):\n",
+    "    \"\"\"Given a tweet, determine whether it is controversial or not.\"\"\"\n",
+    "\n",
+    "    tweet = dspy.InputField()\n",
+    "    controversial = dspy.OutputField(desc=\"Y or N\")\n",
+    "q_3 = dspy.Predict(Controversial)\n",
+    "answer = q_3(tweet=\"The insurrection was a peaceful protest.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if answer.controversial == \"Y\":\n",
+    "    response = requests.post(\n",
+    "        url=\"https://openrouter.ai/api/v1/chat/completions\",\n",
+    "        headers={\n",
+    "            \"Authorization\": f\"Bearer {OPENROUTER_API_KEY}\",\n",
+    "        },\n",
+    "        data=json.dumps({\n",
+    "            \"model\": \"perplexity/sonar-small-online\", # Optional\n",
+    "            \"messages\": [\n",
+    "            {\"role\": \"user\", \"content\": \"Give me the one top link to a news article that disproves the following tweet: \" + \"The insurrection was a peaceful protest.\"}\n",
+    "            ]\n",
+    "        })\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'choices': [{'message': {'role': 'assistant',\n",
+       "    'content': \"The search results provided do not contain a direct link to an article that disproves the tweet that the insurrection on January 6th was a peaceful protest. However, they do shed light on the events leading up to and during the insurrection and the actions taken by former President Donald Trump during that time. \\nThe article from The Washington Post fact-checks Trump's tweets and statements about the events of January 6th, highlighting the role Trump played in stoking the tensions and refusing to take action to calm the situation.\\nThe New Republic article discusses Trump's tweets and actions leading up to and during the insurrection, including how some of his closest allies revealed that Trump did not even write one of the main tweets that he cites as his defense, suggesting that key claims made by Trump about the insurrection have been disproven.\\nFor an article that directly disproves the claim that the insurrection was a peaceful protest, you would need to look for specific evidence and analysis that contradicts the statement. The search results provided in this topic do not contain such an article.\"},\n",
+       "   'finish_reason': 'stop'}],\n",
+       " 'model': 'perplexity/sonar-small-online',\n",
+       " 'id': 'gen-46m8Ym4sthOHTrmpeZf7FeUIjnWZ',\n",
+       " 'object': 'chat.completion',\n",
+       " 'created': 1709451799,\n",
+       " 'usage': {'prompt_tokens': 56, 'completion_tokens': 242, 'total_tokens': 298}}"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"The search results provided do not contain a direct link to an article that disproves the tweet that the insurrection on January 6th was a peaceful protest. However, they do shed light on the events leading up to and during the insurrection and the actions taken by former President Donald Trump during that time. \\nThe article from The Washington Post fact-checks Trump's tweets and statements about the events of January 6th, highlighting the role Trump played in stoking the tensions and refusing to take action to calm the situation.\\nThe New Republic article discusses Trump's tweets and actions leading up to and during the insurrection, including how some of his closest allies revealed that Trump did not even write one of the main tweets that he cites as his defense, suggesting that key claims made by Trump about the insurrection have been disproven.\\nFor an article that directly disproves the claim that the insurrection was a peaceful protest, you would need to look for specific evidence and analysis that contradicts the statement. The search results provided in this topic do not contain such an article.\""
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.json()[\"choices\"][0][\"message\"][\"content\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CommunityNote(dspy.Signature):\n",
+    "    \"\"\"Given a tweet and an explanation of why it is incorrect, generate a correction of the base statement without referring to oneself or the other user. Humor is a plus.\"\"\"\n",
+    "\n",
+    "    tweet = dspy.InputField()\n",
+    "    explanation = dspy.InputField(desc=\"Explanation of why the base statement is incorrect\")\n",
+    "    correction = dspy.OutputField(desc=\"Informative correction of the base statement and mildly humorous if possible. Cite sources.\")\n",
+    "sc = dspy.Predict(CommunityNote)\n",
+    "answer = sc(tweet=\"The insurrection was a peaceful protest.\", explanation = response.json()[\"choices\"][0][\"message\"][\"content\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Prediction(\n",
+       "    correction=\"The events of January 6th were not a peaceful protest, but rather an insurrection. This was characterized by violent clashes with law enforcement, destruction of property, and threats to lawmakers. It's like calling a bull in a china shop a delicate ballet dancer. Sources: The Washington Post, The New Republic.\"\n",
+       ")"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "answer"
    ]
   },
   {
