oops fixed i think and hope

--- a/func_testing.ipynb
+++ b/func_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,17 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'reply1': 'Existential crisis, huh?', 'reply2': \"Life's big questions!\", 'reply3': 'To learn and grow.'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def test_question_replies(text):    \n",
     "    # The URL you want to make a GET request to\n",
@@ -50,7 +42,44 @@
     "        return data\n",
     "    else:\n",
     "        print('Request failed with status code', response.status_code)\n",
-    "        return None"
+    "        return response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Request failed with status code 500\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = test_question_replies(\"The insurrection was good for America.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"error\": \"\\'dict\\' object has no attribute \\'reply1\\'\"}'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res.text"
    ]
   },
   {
