more debugging on prod

--- a/justin_dumb_stuff.ipynb
+++ b/justin_dumb_stuff.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Home\\anaconda3\\envs\\spcopenai\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import dspy\n",
     "import os\n",
@@ -26,7 +17,8 @@
     "from PIL import Image\n",
     "from io import BytesIO\n",
     "import base64\n",
-    "import redis"
+    "import redis\n",
+    "import yfinance as yf"
    ]
   },
   {
@@ -159,6 +151,60 @@
     "new_filter = \"Cyberpunk\"\n",
     "res = filter_image(url, new_filter)\n",
     "res.dict()[\"data\"][0][\"url\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = client.chat.completions.create(\n",
+    "model=\"gpt-4-vision-preview\",\n",
+    "    messages=[\n",
+    "        {\n",
+    "        \"role\": \"assistant\",\n",
+    "        \"content\": [\n",
+    "            {\"type\": \"text\", \"text\": f\"Briefly describe the contents of the image. Two sentences max.\"},\n",
+    "            {\n",
+    "            \"type\": \"image_url\",\n",
+    "            \"image_url\": {\n",
+    "                \"url\": \"https://i.abcnewsfe.com/a/3ef8f266-4f23-4ef2-b69f-89d3c0098a4a/trump-1-gty-er-240112_1705106401323_hpMain.jpg\",\n",
+    "            },\n",
+    "            },\n",
+    "        ],\n",
+    "        }\n",
+    "    ],\n",
+    "    max_tokens=300,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Home\\AppData\\Local\\Temp\\ipykernel_30060\\2666892374.py:1: PydanticDeprecatedSince20: The `dict` method is deprecated; use `model_dump` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.5/migration/\n",
+      "  response.dict()[\"choices\"][0][\"message\"][\"content\"]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"I'm sorry, but I can't provide information about this person.\""
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.dict()[\"choices\"][0][\"message\"][\"content\"]"
    ]
   },
   {
@@ -1185,6 +1231,99 @@
    ],
    "source": [
     "answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  1 of 1 completed\n",
+      "C:\\Users\\Home\\AppData\\Local\\Temp\\ipykernel_30060\\1041492963.py:2: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  percent_today = (data[\"Close\"][-1] - data[\"Open\"][-1]) / data[\"Open\"][-1] * 100\n",
+      "C:\\Users\\Home\\AppData\\Local\\Temp\\ipykernel_30060\\1041492963.py:3: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  current_price = data[\"Close\"][-1]\n",
+      "C:\\Users\\Home\\AppData\\Local\\Temp\\ipykernel_30060\\1041492963.py:4: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  amount_today = data[\"Close\"][-1] - data[\"Open\"][-1]\n",
+      "C:\\Users\\Home\\AppData\\Local\\Temp\\ipykernel_30060\\1041492963.py:6: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  high = data[\"High\"][-1]\n",
+      "C:\\Users\\Home\\AppData\\Local\\Temp\\ipykernel_30060\\1041492963.py:7: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  low = data[\"Low\"][-1]\n",
+      "C:\\Users\\Home\\AppData\\Local\\Temp\\ipykernel_30060\\1041492963.py:8: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  volume = data[\"Volume\"][-1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = yf.download(\"AAPL\", period=\"1mo\")\n",
+    "percent_today = (data[\"Close\"][-1] - data[\"Open\"][-1]) / data[\"Open\"][-1] * 100\n",
+    "current_price = data[\"Close\"][-1]\n",
+    "amount_today = data[\"Close\"][-1] - data[\"Open\"][-1]\n",
+    "close_prices = data[\"Close\"].to_dict()\n",
+    "high = data[\"High\"][-1]\n",
+    "low = data[\"Low\"][-1]\n",
+    "volume = data[\"Volume\"][-1]\n",
+    "close_prices = {timestamp.to_pydatetime().isoformat() + 'Z': price for timestamp, price in close_prices.items()}\n",
+    "returnjson = {\n",
+    "    \"ticker\": \"AAPL\",\n",
+    "    \"percent_today\": percent_today,\n",
+    "    \"amount_today\": amount_today,\n",
+    "    \"current_price\": current_price,\n",
+    "    \"close_prices\": close_prices,\n",
+    "    \"high\": high,\n",
+    "    \"low\": low,\n",
+    "    \"volume\": volume,\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ticker': 'AAPL',\n",
+       " 'percent_today': 0.06126461068332774,\n",
+       " 'amount_today': 0.1100006103515625,\n",
+       " 'current_price': 179.66000366210938,\n",
+       " 'close_prices': {'2024-02-02T00:00:00Z': 185.85000610351562,\n",
+       "  '2024-02-05T00:00:00Z': 187.67999267578125,\n",
+       "  '2024-02-06T00:00:00Z': 189.3000030517578,\n",
+       "  '2024-02-07T00:00:00Z': 189.41000366210938,\n",
+       "  '2024-02-08T00:00:00Z': 188.32000732421875,\n",
+       "  '2024-02-09T00:00:00Z': 188.85000610351562,\n",
+       "  '2024-02-12T00:00:00Z': 187.14999389648438,\n",
+       "  '2024-02-13T00:00:00Z': 185.0399932861328,\n",
+       "  '2024-02-14T00:00:00Z': 184.14999389648438,\n",
+       "  '2024-02-15T00:00:00Z': 183.86000061035156,\n",
+       "  '2024-02-16T00:00:00Z': 182.30999755859375,\n",
+       "  '2024-02-20T00:00:00Z': 181.55999755859375,\n",
+       "  '2024-02-21T00:00:00Z': 182.32000732421875,\n",
+       "  '2024-02-22T00:00:00Z': 184.3699951171875,\n",
+       "  '2024-02-23T00:00:00Z': 182.52000427246094,\n",
+       "  '2024-02-26T00:00:00Z': 181.16000366210938,\n",
+       "  '2024-02-27T00:00:00Z': 182.6300048828125,\n",
+       "  '2024-02-28T00:00:00Z': 181.4199981689453,\n",
+       "  '2024-02-29T00:00:00Z': 180.75,\n",
+       "  '2024-03-01T00:00:00Z': 179.66000366210938},\n",
+       " 'high': 180.52999877929688,\n",
+       " 'low': 177.3800048828125,\n",
+       " 'volume': 73488000}"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "returnjson"
    ]
   },
   {
