--- a/func_testing.ipynb
+++ b/func_testing.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,14 +47,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Request failed with status code 500\n"
+      "{'community_note': \"The insurrection was a challenging event for America, marked by violence and chaos. It's been revealed that the tweets urging peace, attributed to Trump, were actually penned by his deputy chief of staff, Dan Scavino. So, it seems the remote control was more appealing than the Twitter handle that day. [ABC News](https://abcnews.go.com/Politics/trump-reluctant-call-national-guard-stop-riot-panel/story?id=80546672)\", 'reply1': 'Disagree strongly.', 'reply2': 'Absolutely not.', 'reply3': \"That's incorrect.\"}\n"
      ]
     }
    ],
@@ -64,18 +64,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'{\"error\": \"\\'dict\\' object has no attribute \\'reply1\\'\"}'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'dict' object has no attribute 'text'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mres\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtext\u001b[49m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'dict' object has no attribute 'text'"
+     ]
     }
    ],
    "source": [
@@ -372,11 +373,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def text_to_finance_data(text):    \n",
+    "def text_to_finance_data(ticker):    \n",
     "    # The URL you want to make a GET request to\n",
     "    url = 'https://spc-openai-hackathon-backend.onrender.com'\n",
     "    endpoint = '/text_to_finance_data'\n",
@@ -384,7 +385,7 @@
     "\n",
     "    # Assuming you have some variables to pass as query parameters\n",
     "    query_params = {\n",
-    "        'text': text,\n",
+    "        'ticker': ticker,\n",
     "    }\n",
     "\n",
     "    # If you need to add headers\n",
@@ -407,51 +408,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = text_to_finance_data(\"AAPL\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'close_prices': {'2024-02-02T00:00:00Z': 185.85000610351562, '2024-02-05T00:00:00Z': 187.67999267578125, '2024-02-06T00:00:00Z': 189.3000030517578, '2024-02-07T00:00:00Z': 189.41000366210938, '2024-02-08T00:00:00Z': 188.32000732421875, '2024-02-09T00:00:00Z': 188.85000610351562, '2024-02-12T00:00:00Z': 187.14999389648438, '2024-02-13T00:00:00Z': 185.0399932861328, '2024-02-14T00:00:00Z': 184.14999389648438, '2024-02-15T00:00:00Z': 183.86000061035156, '2024-02-16T00:00:00Z': 182.30999755859375, '2024-02-20T00:00:00Z': 181.55999755859375, '2024-02-21T00:00:00Z': 182.32000732421875, '2024-02-22T00:00:00Z': 184.3699951171875, '2024-02-23T00:00:00Z': 182.52000427246094, '2024-02-26T00:00:00Z': 181.16000366210938, '2024-02-27T00:00:00Z': 182.6300048828125, '2024-02-28T00:00:00Z': 181.4199981689453, '2024-02-29T00:00:00Z': 180.75, '2024-03-01T00:00:00Z': 179.66000366210938}, 'current_price': 179.66000366210938, 'percent_today': 0.06126461068332774, 'ticker': 'AAPL'}\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "{'close_prices': {'2024-02-02T00:00:00Z': 185.85000610351562,\n",
-       "  '2024-02-05T00:00:00Z': 187.67999267578125,\n",
-       "  '2024-02-06T00:00:00Z': 189.3000030517578,\n",
-       "  '2024-02-07T00:00:00Z': 189.41000366210938,\n",
-       "  '2024-02-08T00:00:00Z': 188.32000732421875,\n",
-       "  '2024-02-09T00:00:00Z': 188.85000610351562,\n",
-       "  '2024-02-12T00:00:00Z': 187.14999389648438,\n",
-       "  '2024-02-13T00:00:00Z': 185.0399932861328,\n",
-       "  '2024-02-14T00:00:00Z': 184.14999389648438,\n",
-       "  '2024-02-15T00:00:00Z': 183.86000061035156,\n",
-       "  '2024-02-16T00:00:00Z': 182.30999755859375,\n",
-       "  '2024-02-20T00:00:00Z': 181.55999755859375,\n",
-       "  '2024-02-21T00:00:00Z': 182.32000732421875,\n",
-       "  '2024-02-22T00:00:00Z': 184.3699951171875,\n",
-       "  '2024-02-23T00:00:00Z': 182.52000427246094,\n",
-       "  '2024-02-26T00:00:00Z': 181.16000366210938,\n",
-       "  '2024-02-27T00:00:00Z': 182.6300048828125,\n",
-       "  '2024-02-28T00:00:00Z': 181.4199981689453,\n",
-       "  '2024-02-29T00:00:00Z': 180.75,\n",
-       "  '2024-03-01T00:00:00Z': 179.66000366210938},\n",
-       " 'current_price': 179.66000366210938,\n",
-       " 'percent_today': 0.06126461068332774,\n",
-       " 'ticker': 'AAPL'}"
+       "'<!doctype html>\\n<html lang=en>\\n<title>500 Internal Server Error</title>\\n<h1>Internal Server Error</h1>\\n<p>The server encountered an internal error and was unable to complete your request. Either the server is overloaded or there is an error in the application.</p>\\n'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text_to_finance_data(\"I want to know the stock price of Apple\")"
+    "res.text"
    ]
   },
   {
@@ -563,6 +544,25 @@
    "source": [
     "r.set('foo', 'bar')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'yf' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[19], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[43myf\u001b[49m\u001b[38;5;241m.\u001b[39mdownload(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAAPL\u001b[39m\u001b[38;5;124m\"\u001b[39m, period\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m1mo\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      2\u001b[0m percent_today \u001b[38;5;241m=\u001b[39m (data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mClose\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m-\u001b[39m data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOpen\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]) \u001b[38;5;241m/\u001b[39m data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOpen\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m100\u001b[39m\n\u001b[0;32m      3\u001b[0m current_price \u001b[38;5;241m=\u001b[39m data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mClose\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'yf' is not defined"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
