--- a/justin_dumb_stuff.ipynb
+++ b/justin_dumb_stuff.ipynb
@@ -1282,48 +1282,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "returnjson[\"volume\"] = int(returnjson[\"volume\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'ticker': 'AAPL',\n",
-       " 'percent_today': 0.06126461068332774,\n",
-       " 'amount_today': 0.1100006103515625,\n",
-       " 'current_price': 179.66000366210938,\n",
-       " 'close_prices': {'2024-02-02T00:00:00Z': 185.85000610351562,\n",
-       "  '2024-02-05T00:00:00Z': 187.67999267578125,\n",
-       "  '2024-02-06T00:00:00Z': 189.3000030517578,\n",
-       "  '2024-02-07T00:00:00Z': 189.41000366210938,\n",
-       "  '2024-02-08T00:00:00Z': 188.32000732421875,\n",
-       "  '2024-02-09T00:00:00Z': 188.85000610351562,\n",
-       "  '2024-02-12T00:00:00Z': 187.14999389648438,\n",
-       "  '2024-02-13T00:00:00Z': 185.0399932861328,\n",
-       "  '2024-02-14T00:00:00Z': 184.14999389648438,\n",
-       "  '2024-02-15T00:00:00Z': 183.86000061035156,\n",
-       "  '2024-02-16T00:00:00Z': 182.30999755859375,\n",
-       "  '2024-02-20T00:00:00Z': 181.55999755859375,\n",
-       "  '2024-02-21T00:00:00Z': 182.32000732421875,\n",
-       "  '2024-02-22T00:00:00Z': 184.3699951171875,\n",
-       "  '2024-02-23T00:00:00Z': 182.52000427246094,\n",
-       "  '2024-02-26T00:00:00Z': 181.16000366210938,\n",
-       "  '2024-02-27T00:00:00Z': 182.6300048828125,\n",
-       "  '2024-02-28T00:00:00Z': 181.4199981689453,\n",
-       "  '2024-02-29T00:00:00Z': 180.75,\n",
-       "  '2024-03-01T00:00:00Z': 179.66000366210938},\n",
-       " 'high': 180.52999877929688,\n",
-       " 'low': 177.3800048828125,\n",
-       " 'volume': 73488000}"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "<class 'numpy.float64'>\n",
+      "<class 'numpy.float64'>\n",
+      "<class 'numpy.float64'>\n",
+      "<class 'dict'>\n",
+      "<class 'numpy.float64'>\n",
+      "<class 'numpy.float64'>\n",
+      "<class 'int'>\n"
+     ]
     }
    ],
    "source": [
-    "returnjson"
+    "for key, value in returnjson.items():\n",
+    "    print(type(value))"
    ]
   },
   {
