ready to deploy clothing

--- a/clothing_scraper.ipynb
+++ b/clothing_scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,11 +168,11 @@
     "    master_list = []\n",
     "\n",
     "    for article in articles:\n",
-    "        img_tag = soups.find('img', {'name': 'product-module-image'})\n",
+    "        img_tag = article.find('img', {'name': 'product-module-image'})\n",
     "        image_src = img_tag['src'] if img_tag else None\n",
     "\n",
     "        # Find the anchor tag and extract the href attribute\n",
-    "        anchor_tag = soups.find('article').find('a', href=True)\n",
+    "        anchor_tag = article.find('a', href=True)\n",
     "        item_href = anchor_tag['href'] if anchor_tag else None\n",
     "\n",
     "        desc = get_desc(image_src, clothing_item)\n",
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
     "    ['jackets', parsed_jackets]\n",
     "]\n",
     "\n",
-    "for entry in clothing_entries_3:\n",
+    "for entry in clothing_entries_4:\n",
     "    values = get_links(entry[1], entry[0])\n",
     "    columns = ['description','img_src', 'item_link', 'embedding']\n",
     "    df = pd.DataFrame(values, columns=columns)\n",
