--- a/fashion_test.ipynb
+++ b/fashion_test.ipynb
@@ -34,12 +34,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "from openai import OpenAI\n",
-    "\n",
+    "import json \n",
     "client = OpenAI()\n",
     "\n",
     "def get_desc(link):\n",
@@ -51,8 +51,7 @@
     "        \"content\": [\n",
     "          {\"type\": \"text\", \"text\": \"What are all of the articles of clothing in this image? Format the response in JSON object format, \\\n",
     "            with the following categories as keys: 'pants, shorts, hats, shirts, tshirts, shoes, jackets'. For each entry in any of the \\\n",
-    "              categories, make sure to include a description of the color, material used, and any other relevant details. Make sure not \\\n",
-    "                to include newline characters in the output or other words or characters like 'json'\"},\n",
+    "              categories, make sure to include a two sentence description including things like the color, material used, and any other relevant details.\"},\n",
     "          {\n",
     "            \"type\": \"image_url\",\n",
     "            \"image_url\": {\n",
@@ -80,13 +79,15 @@
     "#create a function to strip all newlines from the json and convert it to a json object\n",
     "def strip_newlines(desc):\n",
     "    desc = desc.replace('\\n', '')\n",
+    "    desc = desc.replace('`', '')\n",
+    "    desc = desc.replace('json', '')\n",
     "    desc = json.loads(desc)\n",
     "    return desc\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,37 +111,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "desc_3 = get_desc(fit_1)"
+    "desc_3 = get_desc(fit_2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'pants': [{'color': 'blue',\n",
-       "   'material': 'denim',\n",
-       "   'details': 'light wash, casual fit'}],\n",
-       " 'shorts': [],\n",
-       " 'hats': [],\n",
-       " 'shirts': [{'color': 'olive green',\n",
-       "   'material': 'cotton or cotton blend',\n",
-       "   'details': 'long sleeve, button-up, front pocket with a flap and button closure'}],\n",
-       " 'tshirts': [{'color': 'white',\n",
-       "   'material': 'cotton or cotton blend',\n",
-       "   'details': 'crewneck, short sleeve'}],\n",
-       " 'shoes': [],\n",
-       " 'jackets': []}"
+       "'```json\\n{\\n  \"pants\": [\\n    {\\n      \"description\": \"The person is wearing blue jeans. The jeans appear to be made from a denim material and have a light to medium wash.\"\\n    }\\n  ],\\n  \"shorts\": [],\\n  \"hats\": [],\\n  \"shirts\": [\\n    {\\n      \"description\": \"The individual is wearing an olive green shirt with a button-up design. It appears to be made from a cotton-like material and has two front chest pockets with buttoned flaps; one pocket has a distinctive orange thread detailing.\"\\n    }\\n  ],\\n  \"tshirts\": [\\n    {\\n      \"description\": \"There is a glimpse of a white t-shirt worn underneath the green shirt. The t-shirt has a crew neckline and seems to be made of a soft, comfortable fabric, likely cotton.\"\\n    }\\n  ],\\n  \"shoes\": [],\\n  \"jackets\": []\\n}\\n```'"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "desc_3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'pants': [{'description': 'The person is wearing a pair of classic blue denim jeans. The jeans are a light to medium blue shade and appear to be made of a durable denim fabric.'}],\n",
+       " 'shorts': [],\n",
+       " 'hats': [],\n",
+       " 'shirts': [{'description': 'Underneath the jacket, the individual is wearing a dark navy blue sweater. The sweater appears to be knitted, likely from a wool or wool blend, and features a high, cozy turtleneck.'},\n",
+       "  {'description': \"Beneath the navy sweater, there's a hint of a white shirt with a stiff collar visible above the sweater's neckline. The shirt looks like a standard dress shirt made of a cotton or cotton-blend fabric.\"}],\n",
+       " 'tshirts': [],\n",
+       " 'shoes': [{'description': 'The shoes are brown leather boots with a lace-up front. They extend to cover the ankle and appear sturdy and well-suited for casual or semi-casual outfits.'}],\n",
+       " 'jackets': [{'description': 'The person is wearing a light beige jacket on the outside. The jacket features a turn-down collar, button closure, and multiple pockets, and is made from a thick fabric suitable for cooler weather.'}]}"
+      ]
+     },
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
