--- a/func_testing_dhruv.ipynb
+++ b/func_testing_dhruv.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,14 +171,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'party': 'Left', 'articles': [{'title': 'January 6 insurrection news: Trials, investigations and more', 'link': 'https://www.nbcnews.com/january-6-insurrection-us-capitol'}, {'title': 'Republican lawmaker defends Trump endorsement despite Trump downplaying Jan. 6', 'link': 'https://abcnews.go.com/US/january6/'}, {'title': 'U.S. Capitol Riot', 'link': 'https://www.washingtonpost.com/january-6-capitol-riot/'}, {'title': 'Political turmoil exposed as representatives reveal their uncertainty on January 6', 'link': 'https://www.usatoday.com/story/news/politics/2021/01/09/january-6-capitol-violence-exposes-political-turmoil-members-congress-uncertain'}]}\n"
+     "ename": "KeyError",
+     "evalue": "'choices'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[207], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(text_to_politics(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mJanuary 6th was a dark day for America. We must never forget the insurrection.\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n",
+      "Cell \u001b[1;32mIn[206], line 16\u001b[0m, in \u001b[0;36mtext_to_politics\u001b[1;34m(text)\u001b[0m\n\u001b[0;32m      2\u001b[0m response \u001b[38;5;241m=\u001b[39m requests\u001b[38;5;241m.\u001b[39mpost(\n\u001b[0;32m      3\u001b[0m     url\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://openrouter.ai/api/v1/chat/completions\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m      4\u001b[0m     headers\u001b[38;5;241m=\u001b[39m{\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     13\u001b[0m     })\n\u001b[0;32m     14\u001b[0m )\n\u001b[0;32m     15\u001b[0m data \u001b[38;5;241m=\u001b[39m json\u001b[38;5;241m.\u001b[39mloads(response\u001b[38;5;241m.\u001b[39mtext)\n\u001b[1;32m---> 16\u001b[0m message_content \u001b[38;5;241m=\u001b[39m data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mchoices\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m0\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmessage\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcontent\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_title_link\u001b[39m(input_text):\n\u001b[0;32m     19\u001b[0m     \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mget_title\u001b[39;00m(dspy\u001b[38;5;241m.\u001b[39mSignature):\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'choices'"
      ]
     }
    ],
@@ -317,7 +322,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_link(url):\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def item_query(vector, item):\n",
+    "    \n"
+   ]
   }
  ],
  "metadata": {
