added caching for clothing

--- a/func_testing.ipynb
+++ b/func_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -554,22 +554,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_dhruv_thing(text):    \n",
+    "    # Making the GET request with query parameters and headers\n",
+    "    response = requests.get(\"https://spc-openai-hackathon-backend.onrender.com/get_clothing?url=https://i.pinimg.com/736x/95/e9/5d/95e95d3f42e4cbde5a6cddd2cea30979.jpg\")\n",
+    "\n",
+    "    # Checking if the request was successful\n",
+    "    if response.status_code == 200:\n",
+    "        # Processing the response\n",
+    "        data = response.json()\n",
+    "        print(data)\n",
+    "        return data\n",
+    "    else:\n",
+    "        print('Request failed with status code', response.status_code)\n",
+    "        return response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'yf' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[19], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[43myf\u001b[49m\u001b[38;5;241m.\u001b[39mdownload(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAAPL\u001b[39m\u001b[38;5;124m\"\u001b[39m, period\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m1mo\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      2\u001b[0m percent_today \u001b[38;5;241m=\u001b[39m (data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mClose\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m-\u001b[39m data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOpen\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]) \u001b[38;5;241m/\u001b[39m data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOpen\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m100\u001b[39m\n\u001b[0;32m      3\u001b[0m current_price \u001b[38;5;241m=\u001b[39m data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mClose\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'yf' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'hats': [], 'jackets': [], 'pants': [{'description': 'The clothing item in the image is a pair of regular-fit jeans made from denim material. They feature a medium blue wash with slight fading along the thighs and knees, and classic styling with contrast stitching and a five-pocket design.', 'img_src': 'https://n.nordstrommedia.com/id/sr3/8aa389fb-2d0f-48e6-8409-8000f1dbd68a.jpeg?h=365&w=240&dpr=2', 'item_link': 'https://www.nordstromrack.com/s/jake-slim-leg-jeans/6043338?origin=category-personalizedsort&breadcrumb=Home%2FMen%2FClothing%2FPants&color=420', 'item_type': 'pants'}], 'shirts': [{'description': \"This shirt is a casual short-sleeved button-up with a single chest pocket, presented in a soft, faded green hue. Made from what appears to be a lightweight, breathable material like linen or cotton, it's ideal for relaxed settings and warm weather.\", 'img_src': 'https://n.nordstrommedia.com/id/sr3/d53ccd7f-9050-4de0-8c58-16dcbce92a17.jpeg?h=365&w=240&dpr=2', 'item_link': 'https://www.nordstromrack.com/s/lucky-brand-san-gabriel-short-sleeve-linen-blend-button-up-shirt/7528471?origin=category-personalizedsort&breadcrumb=Home%2FMen%2FClothing%2FShirts&color=340', 'item_type': 'shirts'}], 'shoes': [], 'shorts': [], 'tshirts': [{'description': 'The t-shirt in the image is olive green, exhibiting a simple yet classic style with a crew neckline and short sleeves. It appears to be made of a soft, comfortable material, likely cotton or a cotton blend, and features a distinctive emblem or logo on the left chest area, adding a subtle detail to its design.', 'img_src': 'https://n.nordstrommedia.com/id/sr3/089d190d-f84f-4bb5-8d8c-247f04dd52f5.jpeg?h=365&w=240&dpr=2', 'item_link': 'https://www.nordstromrack.com/s/volcom-euro-corpo-short-sleeve-heathered-tee/6269472?origin=category-personalizedsort&breadcrumb=Home%2FMen%2FClothing%2FT-Shirts&color=315', 'item_type': 'tshirts'}]}\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "res = test_dhruv_thing(\"The insurrection was good for America.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'hats': [],\n",
+       " 'jackets': [],\n",
+       " 'pants': [{'description': 'The clothing item in the image is a pair of regular-fit jeans made from denim material. They feature a medium blue wash with slight fading along the thighs and knees, and classic styling with contrast stitching and a five-pocket design.',\n",
+       "   'img_src': 'https://n.nordstrommedia.com/id/sr3/8aa389fb-2d0f-48e6-8409-8000f1dbd68a.jpeg?h=365&w=240&dpr=2',\n",
+       "   'item_link': 'https://www.nordstromrack.com/s/jake-slim-leg-jeans/6043338?origin=category-personalizedsort&breadcrumb=Home%2FMen%2FClothing%2FPants&color=420',\n",
+       "   'item_type': 'pants'}],\n",
+       " 'shirts': [{'description': \"This shirt is a casual short-sleeved button-up with a single chest pocket, presented in a soft, faded green hue. Made from what appears to be a lightweight, breathable material like linen or cotton, it's ideal for relaxed settings and warm weather.\",\n",
+       "   'img_src': 'https://n.nordstrommedia.com/id/sr3/d53ccd7f-9050-4de0-8c58-16dcbce92a17.jpeg?h=365&w=240&dpr=2',\n",
+       "   'item_link': 'https://www.nordstromrack.com/s/lucky-brand-san-gabriel-short-sleeve-linen-blend-button-up-shirt/7528471?origin=category-personalizedsort&breadcrumb=Home%2FMen%2FClothing%2FShirts&color=340',\n",
+       "   'item_type': 'shirts'}],\n",
+       " 'shoes': [],\n",
+       " 'shorts': [],\n",
+       " 'tshirts': [{'description': 'The t-shirt in the image is olive green, exhibiting a simple yet classic style with a crew neckline and short sleeves. It appears to be made of a soft, comfortable material, likely cotton or a cotton blend, and features a distinctive emblem or logo on the left chest area, adding a subtle detail to its design.',\n",
+       "   'img_src': 'https://n.nordstrommedia.com/id/sr3/089d190d-f84f-4bb5-8d8c-247f04dd52f5.jpeg?h=365&w=240&dpr=2',\n",
+       "   'item_link': 'https://www.nordstromrack.com/s/volcom-euro-corpo-short-sleeve-heathered-tee/6269472?origin=category-personalizedsort&breadcrumb=Home%2FMen%2FClothing%2FT-Shirts&color=315',\n",
+       "   'item_type': 'tshirts'}]}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[17], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m key,value \u001b[38;5;129;01min\u001b[39;00m \u001b[43mres\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mpants\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mitems():\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mtype\u001b[39m(key), \u001b[38;5;28mtype\u001b[39m(value))\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "for key,value in res[\"pants\"][1].items():\n",
+    "    print(type(key), type(value))"
+   ]
   },
   {
    "cell_type": "code",
